Fixed image not correctly vertically aligned in upload preview

--- a/_System/apps/bc-meet-the-team/assets/styles.css
+++ b/_System/apps/bc-meet-the-team/assets/styles.css
@@ -77,6 +77,7 @@ body {
 .member-upload-preview {
     max-width: 120px;
     max-height: 100px;
+    vertical-align: bottom;
 }
 
 #member-picture-select {
